# project-collection

./: README.md
testapplication/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
testapplication/cmake/modules/: FindTestapplication.cmake
testapplication/doc/: CMakeLists.txt  Doxyfile
testapplication/package/linux_debian_deb/: create_package.sh  instructions.txt
testapplication/src/: CMakeLists.txt
testapplication/src/sharedlibrary/: CMakeLists.txt  SharedLibrary.cpp  SharedLibrary.h  SharedLibraryExport.h
testapplication/src/staticlibrary/: CMakeLists.txt  StaticLibrary.cpp  StaticLibrary.h
testapplication/src/testapplication/: CMakeLists.txt  DialogResourceText.cpp  DialogResourceText.h  DialogUi.cpp  DialogUi.h  DialogUi.ui  Resource.qrc  TestApplication.cpp  TestApplication.h  TestApplication.ui  main.cpp
testapplication/src/testapplication/data/: CMakeLists.txt
testapplication/src/testapplication/data/desktop/: testapplication.desktop
testapplication/src/testapplication/data/text/: index.html
web-angular2-example/: index.html  package.json  typings.json  webpack.config.js
web-angular2-example/app/: application.component.html  application.component.ts  application.routes.ts  main.ts
web-gibmshop-en/: LICENSE.md  README.md  create_template.sh
web-gibmshop-en/src/: index.php  templateDetails.xml
web-panoramaview-en/: LICENSE.md  README.md
web-panoramaview-en/cronjob/: cronjob.txt
web-panoramaview-en/doc/: Documentation.odt
web-panoramaview-en/sql/: panoramaview.sql
web-panoramaview-en/src/: capture.php  config.php  functions.php  index.php  requests.php
web-radiostation-de/: .gitmodules  LICENSE.txt  README.md
web-radiostation-de/sql/: tracks.sql
web-radiostation-de/src/: functions.php  index.php  requests.php
web-raspberrypi-streaming-en/: .gitignore  LICENSE.txt  README.md
web-raspberrypi-streaming-en/doc/: Documentation.odt
web-raspberrypi-streaming-en/sql/: raspberrypi.sql
web-raspberrypi-streaming-en/src/: config.php  functions.php  index.php  requests.php
web-springapp/: pom.xml
web-springapp/application/: pom.xml
web-springapp/backend/: pom.xml
web-springapp/services/: pom.xml
web-timetable-de/: LICENSE.txt  README.md
web-timetracking-de/: .gitmodules  LICENSE.txt  README.md
web-timetracking-de/doc/: Datenbankmodell.mwb  Pflichtenheft.docx
web-timetracking-de/sql/: timetracking.sql
web-timetracking-de/src/: config.php  functions.php  index.php  requests.php
webcms-java/: .gitignore  README.md  pom.xml
(+112 files in other folders)
